# usbws-lws

./: Makefile.am  README  configure.ac
doc/: usbws.8  usbwsa.8  usbwsd.8
os/win32/: BUILD  copy_usbws_to_win32.sh
src/: Makefile.am  usbws.c  usbws.h  usbws_bind_kind.c  usbws_client.c  usbws_client.h  usbws_connect_kind.c  usbws_ctx.c  usbws_ctx.h  usbws_detach.c  usbws_list.c  usbws_port.c  usbws_session.c  usbws_session.h  usbws_util.c  usbws_util.h  usbws_win32.h  usbwsd.c
